[TECH TASK]: Authentication (#14)
